# pytest_example

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yaml  pyproject.toml  pytest.ini
ITCH_Daily_Life_Cycle/: README.md  Readme.txt  conftest.py
ITCH_Daily_Life_Cycle/AA/: test_MD_symbol_directory.py  test_MD_system_event.py
ITCH_Daily_Life_Cycle/related_files/: utils.py
cfg/: categories.json
httpbin_test_requests/: .gitignore  Readme.md  conftest.py  requirements.txt  run.sh  test_config.ini
httpbin_test_requests/cfg/: environment.properties
tests/: test_super_test.py
