[tool.poetry]
name = "pytest_example"
version = "0.0.2"
description = "Example API tests"
authors = ["Anatoly Bobunov <dev.bobunov@gmail.com>"]
packages = []

[tool.poetry.dependencies]
python = "^3.7"
ujson = "1.35"
requests = "2.20.0"
lxml = "4.3.1"
pytest-sugar = "^0.9.2"
pytest-xdist = "^1.28"
pytest-rerunfailures = "^7.0"

[tool.poetry.dev-dependencies]

PyYAML = "^3.12"

flake8 = "3.7.7"
flake8-debugger = "3.1.0"
flake8-import-order = "0.18.1"
flake8-mypy = "17.8.0"
pep8-naming = "0.7.0"
flake8-print = "3.1.0"

black = "19.3b0"
pytest = "^4.4"
allure-pytest = "^2.6"
hypothesis = "^4.15"
pyhamcrest = "^1.9"

[tool.black]
line-length = 120
target-version = ['py37']

[tool.isort]
line_length = 120
multi_line_output = 3
include_trailing_comma = true
not_skip = "__init__.py"
skip = "venv"
